# pastebin

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  tsconfig.json
src/: main.rs  main.ts
src/views/: index.ejs
templates/: index.html
