[package]
name = "pastebin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.12.1"
socketioxide = { version = "0.16.1", features = ["extensions", "state"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"
dotenvy = "0.15.7"
